kustomize/miniflux/deployment-miniflux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: miniflux
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: miniflux
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgres://miniflux:uIJdecZ7BXpDNmeWpqq1RzxKq8A5LWrQ4@postgres:5432/miniflux?sslmode=disable
        - name: RUN_MIGRATIONS
          value: '1'
        - name: CREATE_ADMIN
          value: '1'
        - name: ADMIN_USERNAME
          value: dave
        - name: ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: adminpassword
              name: miniflux-secrets
        image: miniflux/miniflux:latest
        imagePullPolicy: Always
        name: miniflux
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
