kustomize/miniflux/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: miniflux
    namespace: miniflux
  spec:
    clusterIP: 10.43.22.88
    clusterIPs:
    - 10.43.22.88
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: miniflux
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: postgres
    namespace: miniflux
  spec:
    clusterIP: 10.43.233.25
    clusterIPs:
    - 10.43.233.25
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: postgres
    sessionAffinity: None
    type: ClusterIP
kind: List
