kustomize/miniflux/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
    name: miniflux-ingress
    namespace: miniflux
  spec:
    rules:
    - host: miniflux.stillon.top
      http:
        paths:
        - backend:
            service:
              name: miniflux
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - miniflux.stillon.top
      secretName: miniflux.stillon.top-tls
kind: List
